force-app/main/default/objects/df_122_andra_fullmaktshavare_singel__c/df_122_andra_fullmaktshavare_singel__c.object-meta.xml
<CustomObject>
    <label>Andra fullmaktshavare (Singel)</label>
    <nameField>
        <label>Andra fullmaktshavare (Singel) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Andra fullmaktshavare (Singel)s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>