force-app/main/default/objects/df_122_andra_fullmaktshavare_singel__c/fields/efternamn_andra_fullmaktshavare_270__c.field-meta.xml
<CustomField>
    <fullName>efternamn_andra_fullmaktshavare_270__c</fullName>
    <label>Efternamn 56106</label>
    <length>255</length>
    <type>Text</type>
</CustomField>