force-app/main/default/objects/df_122_andra_fullmaktshavare_singel__c/fields/frnamn_andra_fullmaktshavare_sin_269__c.field-meta.xml
<CustomField>
    <fullName>frnamn_andra_fullmaktshavare_sin_269__c</fullName>
    <label>Förnamn 3ba29</label>
    <length>255</length>
    <type>Text</type>
</CustomField>