force-app/main/default/objects/df_122_andra_fullmaktshavare_singel__c/fields/personnummer_andra_fullmaktshava_279__c.field-meta.xml
<CustomField>
    <fullName>personnummer_andra_fullmaktshava_279__c</fullName>
    <label>Personnummer 0bdb2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>