force-app/main/default/objects/df_122_andra_fullmaktshavare_singel__c/fields/sekundr_fullmaktshavare_priorite_271__c.field-meta.xml
<CustomField>
    <fullName>sekundr_fullmaktshavare_priorite_271__c</fullName>
    <label>Sekundär fullmaktshavare priorit 4b2c4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>